[tool.poetry]
name = "linkedin-analytics"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
selenium = "^4.7.2"
bs4 = "^0.0.1"
webdriver-manager = "^3.8.5"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
