[tool.poetry]
name = "linkedin-analytics"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"
selenium = "^4.7"
bs4 = "^0.0"
webdriver-manager = "^3.8"
lxml = "^4.9"
tk = "^0.1"
streamlit = "^1.16"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
pycodestyle = "^2.10"
flake8 = "^6.0"
watchdog = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
